locale: updated translations

--- a/django-app/locale/it_IT/LC_MESSAGES/django.po
+++ b/django-app/locale/it_IT/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-10-26 09:45+0000\n"
+"POT-Creation-Date: 2022-10-26 10:14+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -176,7 +176,7 @@ msgstr ""
 msgid "Create your first transcription"
 msgstr "Genera la tua prima trascrizione"
 
-#: transcribe/templates/transcribe/transcription_list_and_detail.html:73           "
+#: transcribe/templates/transcribe/transcription_list_and_detail.html:73
 msgid ""
 "\n"
 "                            <span class=\"font-7\">Select</span>\n"
@@ -188,8 +188,10 @@ msgid ""
 msgstr ""
 "\n"
 "                            <span class=\"font-7\">Seleziona</span>\n"
-"                            <span class=\"font-7 font-size-150\">una trascrizione </span>\n"
-"                            <span class=\"font-5 text-muted\">o creane una nuova </span>\n"
+"                            <span class=\"font-7 font-size-150\">una "
+"trascrizione </span>\n"
+"                            <span class=\"font-5 text-muted\">o creane una "
+"nuova </span>\n"
 "                        "
 
 #: transcribe/views.py:26
@@ -204,10 +206,11 @@ msgid ""
 "link'>cookie policy</a></strong>, in order to allow the proper operation of "
 "the app"
 msgstr ""
-"Ho preso visione e accetto la <strong><a href='{}' target='_blank' class='site-"
-"link'>privacy policy</a></strong> nonché l'utilizzo dei cookie essenziali, "
-"in accordo con la nostra <strong><a href='{}' target='_blank' class='site-"
-"link'>cookie policy</a></strong>, per consentire il normale funzionamento dell'app"
+"Ho preso visione e accetto la <strong><a href='{}' target='_blank' "
+"class='site-link'>privacy policy</a></strong> nonché l'utilizzo dei cookie "
+"essenziali, in accordo con la nostra <strong><a href='{}' target='_blank' "
+"class='site-link'>cookie policy</a></strong>, per consentire il normale "
+"funzionamento dell'app"
 
 #: user_management/forms.py:51
 msgid "You must accept the privacy policies."
@@ -319,7 +322,8 @@ msgid ""
 "                        "
 msgstr ""
 "\n"
-"                            Elimina il tuo account e tutte le tue informazioni\n"
+"                            Elimina il tuo account e tutte le tue "
+"informazioni\n"
 "                        "
 
 #: user_management/templates/user_management/user_ajax.html:23
